--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,32 @@
 asgiref==3.8.1
+asttokens==3.0.0
+decorator==5.2.1
 Django==5.2
 djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
 drf-yasg==1.21.10
+executing==2.2.0
 inflection==0.5.1
+ipython==9.1.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+matplotlib-inline==0.1.7
 packaging==24.2
+parso==0.8.4
+pexpect==4.9.0
+prompt_toolkit==3.0.50
 psycopg2-binary==2.9.10
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.1
+PyJWT==2.9.0
 python-decouple==3.8
 pytz==2025.2
 PyYAML==6.0.2
 six==1.17.0
 sqlparse==0.5.3
+stack-data==0.6.3
+traitlets==5.14.3
+typing_extensions==4.13.2
 uritemplate==4.1.1
+wcwidth==0.2.13
